src/css/styles.css
* {
  padding: 0;
  margin: 0;
  font-family: 'Ubuntu', 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI',
    Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol';
}

body {
  height: 100vh;
  width: 100vw;
  background-color: black;
}

.wrapper {
  height: 100vh;
  width: 100vw;

  display: grid;
  align-items: center;
  grid-template-rows: max-content 0.5fr;
  transition: 1s;
}

.day {
  background-color: rgb(90, 134, 199);
  color: black;
}

.night {
  background-color: rgb(32, 39, 72);
  color: white;
}

.userInput {
  display: grid;
  grid-template-columns: 0.2fr auto;
  justify-content: center;
}

#search {
  width: 100%;
  background-color: rgb(133 141 151);
  height: 30px;
  border: none;
  border-right: 2px solid rgb(212, 212, 212);
  outline: none;
  padding: 0 8px;
  color: white;
}

button {
  width: 30px;
  height: 30px;
  background-color: rgb(64, 64, 64);
  border: none;
  outline: none;
  padding: 0 8px;
  color: white;
  display: grid;
  align-items: center;
  justify-content: center;
  font-size: 16px;
}

button:hover {
  background-color: rgb(20, 20, 20);
  font-size: 15px;
}

button:active {
  background-color: rgb(95, 95, 95);
  font-size: 14px;
}

.weatherInfo {
  display: grid;
  align-content: center;
  justify-content: center;
}

.weatherInfo > div {
  display: grid;
  grid-template-columns: 128px 128px;
  align-items: center;
  justify-content: start;
  align-content: center;
  gap: 16px;
}

.weatherInfo > div > h3 {
  display: grid;
  justify-content: end;
  letter-spacing: 0px;
}

h1 {
  font-size: 64px;
  width: fit-content;
}

h4 {
  letter-spacing: 1px;
  font-weight: 400;
}

.wrap > div:first-child {
  display: grid;
  grid-template-columns: max-content min-content;
  justify-content: center;
  align-items: center;
}

#tempDiv {
  font-size: 64px;
  text-align: center;
  height: 100px;
  display: grid;
}

.error {
  border: 2px solid rgb(180, 0, 0) !important;
  padding: 0 6px !important;
}

.error::-webkit-input-placeholder {
  color: rgb(180, 0, 0);
}

.filler {
  display: grid;
  justify-content: center;
  align-items: end;
  height: calc(100% - 24px);
  font-size: 14px;
}

a {
  color: inherit;
}

